--- a/src/components/product/product.module.css
+++ b/src/components/product/product.module.css
@@ -1,5 +1,6 @@
 .productContainer {
   background-color: rgb(188, 163, 255);
+  opacity: 0.7;
   border-radius: 10px;
   color: black;
   margin: 5px;
