--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,4 +1,5 @@
 .navigation {
+  padding: 0 10px;
   margin: 20px 0;
   display: flex;
   justify-content: space-between;
@@ -9,6 +10,8 @@
   width: 300px;
   height: 400px;
   background-size: contain;
+  border-radius: 10px;
+  box-shadow: 1px 2px 3px gray;
 }
 
 .nav:hover {
