--- a/src/components/product/product.module.css
+++ b/src/components/product/product.module.css
@@ -1,6 +1,6 @@
 .productContainer {
-  background-color: rgb(188, 163, 255);
-  opacity: 0.7;
+  background-color: white;
+  opacity: 0.9;
   border-radius: 10px;
   color: black;
   margin: 5px;
