--- a/src/components/reviews/review/review.module.css
+++ b/src/components/reviews/review/review.module.css
@@ -1,7 +1,8 @@
 .reviewContainer {
   background-color: white;
+  opacity: 0.9;
   border-radius: 10px;
   color: black;
   margin: 5px;
-  box-shadow: 2px 2px 2px black;
+  box-shadow: 2px 2px 2px silver;
 }
