--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,15 +1,29 @@
 .header {
+  display: flex;
   position: fixed;
-  background-color: whitesmoke;
   align-items: center;
-  opacity: 0.5;
-  width: 100vw;
+  background-color: whitesmoke;
+  border-bottom: 1px solid silver;
+  width: 100%;
   height: 50px;
   z-index: 50;
 }
 
-.header ul {
+.logo {
   display: flex;
+  margin-left: 10px;
+  flex: 1;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.menu {
+  flex: 1;
+}
+
+ul {
+  display: flex;
+  justify-content: end;
   align-items: center;
   flex-direction: row;
   list-style: none;
