--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -15,6 +15,9 @@ h1 {
 }
 
 .nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 300px;
   height: 400px;
   background-size: contain;
@@ -23,8 +26,13 @@ h1 {
   transition: 0.2s ease-in all;
 }
 
+.nav h2 {
+  font-size: 2.5rem;
+  text-shadow: 2px 2px 2px black;
+}
+
 .nav:hover {
   transform: scale(0.98);
   background-blend-mode: multiply;
-  background-color: rgb(181, 138, 221);
+  background-color: rgb(109, 109, 109);
 }
