--- a/src/components/product/product.module.css
+++ b/src/components/product/product.module.css
@@ -1,8 +1,41 @@
-.productContainer {
-  background-color: white;
+.product {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
   opacity: 0.9;
   border-radius: 10px;
   color: black;
   margin: 5px;
-  box-shadow: 2px 2px 2px silver;
+}
+
+.description,
+.order {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 500px;
+  height: 150px;
+  background-color: white;
+}
+
+.order {
+  flex-direction: row;
+}
+
+.order button {
+  border-radius: 50%;
+  font-size: 2rem;
+  background-image: linear-gradient(black, silver);
+  width: 50px;
+  height: 50px;
+}
+
+.order > * {
+  margin-right: 10px;
+}
+
+.description h2{
+  font-size: 2rem;
 }
