--- a/src/components/restaurants/restaurant/restaurant.module.css
+++ b/src/components/restaurants/restaurant/restaurant.module.css
@@ -1,8 +1,33 @@
 .restaurant {
   margin-top: 50px;
+  color: white;
 }
 
-form {
-  padding: 20px;
-  border: 1px solid greenyellow;
+.restaurant h3 {
+  font-size: 4rem;
+  text-shadow: 1px 1px 1px black;
+}
+
+.restaurant > * {
+  margin-bottom: 10px;
+}
+
+.switcher button {
+  padding: 10px;
+  background-color: white;
+  color: black;
+  border: none;
+  margin: 0 20px 20px;
+  width: 100px;
+  border-radius: 5px;
+  transition: 0.2s ease;
+}
+
+.switcher button:hover {
+  background-color: black;
+  color: white;
+}
+
+.switcher button:active {
+  transform: scale(0.96);
 }
