--- a/src/components/reviews/review/review.module.css
+++ b/src/components/reviews/review/review.module.css
@@ -1,8 +1,21 @@
 .reviewContainer {
-  background-color: white;
-  opacity: 0.9;
+  display: flex;
+  width: 800px;
+  align-items: center;
+  justify-content: start;
+  height: 100px;
   border-radius: 10px;
   color: black;
   margin: 5px;
-  box-shadow: 2px 2px 2px silver;
+}
+
+.reviewContainer:nth-child(even) {
+  justify-content: end;
+}
+
+.review {
+  width: 500px;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 2px 2px 2px 2px silver;
 }
