--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -5,7 +5,7 @@
   background-color: whitesmoke;
   border-bottom: 1px solid silver;
   width: 100%;
-  height: 50px;
+  height: 70px;
   z-index: 50;
 }
 
@@ -15,6 +15,11 @@
   flex: 1;
   font-size: 2rem;
   font-weight: bold;
+}
+
+.logo img {
+  height: 70px;
+  width: 70px;
 }
 
 .menu {
