--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -8,7 +8,17 @@
   align-items: center;
 }
 
-.description, .social {
+.logo {
+  display: flex;
+  padding: 5px;
+  align-items: center;
+  font-family: 'Architects Daughter', cursive;
+  height: 100px;
+  border-right: 1px solid silver;
+}
+
+.description,
+.social {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -28,7 +38,8 @@
   color: black;
 }
 
-.up, .down{
+.up,
+.down {
   height: 50px;
   opacity: 0.8;
   display: flex;
@@ -49,7 +60,8 @@ ul li {
   display: inline-block;
 }
 
-ul li:hover, ul li i {
+ul li:hover,
+ul li i {
   color: rgb(71, 71, 71);
   transition: 0.5s ease;
 }
