--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   position: fixed;
   align-items: center;
-  background-color: whitesmoke;
+  background-color: white;
   border-bottom: 1px solid silver;
   width: 100%;
   height: 70px;
@@ -11,15 +11,16 @@
 
 .logo {
   display: flex;
+  align-items: center;
   margin-left: 10px;
+  font-family: 'Architects Daughter', cursive;
   flex: 1;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
 .logo img {
-  height: 70px;
-  width: 70px;
+  height: 65px;
 }
 
 .menu {
