--- a/src/components/basket/basket.module.css
+++ b/src/components/basket/basket.module.css
@@ -1,24 +1,12 @@
 .basket {
-  position: fixed;
-  z-index: 100;
-  bottom: 10px;
-  right: 10px;
+  margin: 50px;
+  padding: 10px;
   background-color: white;
-  opacity: 0.9;
   box-shadow: 2px 2px 2px silver;
   border-radius: 5px;
-  animation: identifier infinite 1s;
 }
 
 .basket i {
   font-size: 2rem;
 }
 
-@keyframes identifier {
-  from {
-    opacity: 0.8;
-  }
-  to {
-    opacity: 1;
-  }
-}
