--- a/src/components/product/product.module.css
+++ b/src/components/product/product.module.css
@@ -27,7 +27,7 @@
 .order button {
   border-radius: 50%;
   font-size: 2rem;
-  background-image: linear-gradient(black, silver);
+  background-color: black;
   width: 50px;
   height: 50px;
 }
