--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -3,6 +3,7 @@
 }
 
 h1 {
+  font-family: 'Architects Daughter', cursive;
   font-size: 4rem;
   text-shadow: 1px 1px 1px black;
 }
@@ -25,6 +26,8 @@ h1 {
   box-shadow: 1px 2px 3px gray;
   transition: 0.2s ease-in all;
 }
+
+
 
 .nav h2 {
   font-size: 2.5rem;
