--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -21,6 +21,8 @@ h1 {
   justify-content: center;
   width: 300px;
   height: 400px;
+  text-decoration: none;
+  color: white;
   background-size: contain;
   border-radius: 10px;
   box-shadow: 1px 2px 3px gray;
