added routing between restaurant menu and reviews

--- a/src/components/restaurants/restaurant/restaurant.module.css
+++ b/src/components/restaurants/restaurant/restaurant.module.css
@@ -12,8 +12,18 @@
   margin-bottom: 10px;
 }
 
-.switcher button {
+.switcher {
+  margin: 20px;
+  flex-direction: row;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.switcher a {
+  display: block;
   padding: 10px;
+  text-decoration: none;
   background-color: white;
   color: black;
   border: none;
@@ -23,11 +33,15 @@
   transition: 0.2s ease;
 }
 
-.switcher button:hover {
+.switcher a:hover {
   background-color: black;
   color: white;
 }
 
-.switcher button:active {
+.switcher a:active {
   transform: scale(0.96);
+}
+
+.active {
+  background-color: rgb(19, 199, 19) !important;
 }
